
[project]
name = "gcsnap"
version = "1.0.17"
description = "GCsnap: Interactive snapshots for the comparison of protein-coding genomic contexts"
authors = [
    {name = "pentamorfico", email = "amarrod96@gmail.com"},
    {name = "Joana Pereira", email = "pereira.joanam@gmail.com"},
]
dependencies = [
    "urllib3==1.26.14",
    "biopython",
    "bokeh == 1.3.4",
    "matplotlib",
    "networkx==2.8.8",
    "numpy == 1.20",
    "pacmap",
    "pandas",
    "requests_cache",
    "scikit-learn",
    "jinja2==3.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["genomic contexts homology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/JoanaMPereira/GCsnap"

[project.scripts]
GCsnap = "gcsnap.GCsnap:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
